# picow_ds4

./: CMakeLists.txt  README.md  a.out
inc/: crc.h  crc8.h  main.h  shared.h
src/: CMakeLists.txt  bt_hid.c  crc.c  crc8.c  main.c  shared.c
